# mini_crm

./: .env.example  .gitignore  Dockerfile  README.md  agent_card.json  agent_card_local.json  docker-compose.yml  pyproject.toml
.veris/: agent.json
.veris/scenarios/: e7ac13b2-d975-433b-a54b-f195543156cf.json  e8a51f7c-2308-4037-b2e6-f884b8c6dca9.json
app/: __init__.py  agent.py  db.py  main.py  schema.py  tools.py
db/: leads.json
